--- a/deployment/deployment.yaml
+++ b/deployment/deployment.yaml
@@ -21,5 +21,5 @@ spec:
       
     spec:
       containers:
-        - name: httpd
-          image: httpd    
+        - name:Blue
+          image: varunmanik/ht    
